--- a/builder.html
+++ b/builder.html
@@ -52,7 +52,7 @@
 				<!-- Header -->
 					<header id="header">
 						<img class="logoSmall" style="height: 40px; max-width: 40px; margin-left: 0.75em; margin-top: 3px;" src="images/logo-small.png">
-						<h1 style="padding-left: 45px;"><a href="index.html">Condos Cité Avenir Laval</a></h1>
+						<h1 style="padding-left: 45px;"><a href="index.html">Condos Cité-Avenir Laval</a></h1>
 						<nav id="nav">
 							<ul>
 								<li>
@@ -83,8 +83,8 @@
 						</header>
 						<section class="wrapper style5" style="padding: 2em 0 3em 0;">
 							<div class="inner" style="padding: 0 2em 0 2em;">
-								<p>The promoters of Condominiums Cité Avenir Laval have mandated M2 Construction inc with the construction of this project.</p>
-								<p>M2 Construction inc. is a family owned and operated company with over 35 years of experience in Building construction, Project Development and Project Management. M2 Construction inc. has overseen and directed the construction of many luxury homes, multi-family dwellings, as well as townhouses and condominium projects in the Greater Montreal area.</p>
+								<p>Les promoteurs de Condos Cité-Avenir-Laval ont mandaté M2 Construction inc. avec la construction de ce projet.</p>
+								<p>M2 Construction inc. est une entreprise familiale avec plus de 35 ans d’expérience dans les domaines de la Construction de Bâtiment, Développement de projets et Gérance de projets, en ayant dirigé et supervisé la construction de plusieurs maisons de prestige, bâtiments multifamiliales, ainsi que des projets de maisons de ville et condominiums dans la Grande Région de Montréal.</p>
 								<a href="http://www.m2construction.ca/" style="width: 350px; margin-left: auto; margin-right: auto; margin-bottom: 0px; margin-top: 25px;" class="button fit special">m2construction.ca</a>
 							</div>
 
