--- a/contact.html
+++ b/contact.html
@@ -52,7 +52,7 @@
 				<!-- Header -->
 					<header id="header">
 						<img class="logoSmall" style="height: 40px; max-width: 40px; margin-left: 0.75em; margin-top: 3px;" src="images/logo-small.png">
-						<h1 style="padding-left: 45px;"><a href="index.html">Condos Cité Avenir Laval</a></h1>
+						<h1 style="padding-left: 45px;"><a href="index.html">Condos Cité-Avenir Laval</a></h1>
 						<nav id="nav">
 							<ul>
 								<li>
@@ -86,21 +86,21 @@
 
 								<center>
 									<p>
-										<b>Telephone:</b> 514-815-0858<br>
-										<b>Email:</b> info@m2construction.ca
+										<b>Téléphone:</b> 514-815-0858<br>
+										<b>Courriel:</b> info@citéavenirlaval.ca
 									</p>
 								</center>
 
 								<hr />
 
 								<section>
-									<form method="post" action="https://formspree.io/condo@gmail.ca">
+									<form method="post" action="https://formspree.io/info@citéavenirlaval.ca">
 										<div class="row uniform">
 											<div class="6u 12u$(xsmall)">
-												<input type="text" name="demo-name" id="demo-name" value="" placeholder="Name" />
+												<input type="text" name="demo-name" id="demo-name" value="" placeholder="Nom" />
 											</div>
 											<div class="6u$ 12u$(xsmall)">
-												<input type="email" name="demo-email" id="demo-email" value="" placeholder="Email" />
+												<input type="email" name="demo-email" id="demo-email" value="" placeholder="Courriel" />
 											</div>
 											<!-- <div class="12u$">
 												<div class="select-wrapper">
@@ -115,12 +115,11 @@
 											</div> -->
 
 											<div class="12u$">
-												<textarea name="demo-message" id="demo-message" placeholder="Enter your message" rows="6"></textarea>
+												<textarea name="demo-message" id="demo-message" placeholder="Entrez votre message" rows="6"></textarea>
 											</div>
 											<div class="12u$">
 												<ul class="actions">
-													<li><input type="submit" value="Send Message" class="special" /></li>
-													<li><input type="reset" value="Reset" /></li>
+													<li><input type="submit" value="Envoyer" class="special" /></li>
 												</ul>
 											</div>
 										</div>
