--- a/en-contact.html
+++ b/en-contact.html
@@ -52,7 +52,7 @@
 				<!-- Header -->
 					<header id="header">
 						<img class="logoSmall" style="height: 40px; max-width: 40px; margin-left: 0.75em; margin-top: 3px;" src="images/logo-small.png">
-						<h1 style="padding-left: 45px;"><a href="en-index.html">Condos Cité Avenir Laval</a></h1>
+						<h1 style="padding-left: 45px;"><a href="en-index.html">Condos Cité-Avenir Laval</a></h1>
 						<nav id="nav">
 							<ul>
 								<li>
@@ -87,14 +87,14 @@
 								<center>
 									<p>
 										<b>Telephone:</b> 514-815-0858<br>
-										<b>Email:</b> info@m2construction.ca
+										<b>Email:</b> info@citéavenirlaval.ca
 									</p>
 								</center>
 
 								<hr />
 
 								<section>
-									<form method="post" action="https://formspree.io/condo@gmail.ca">
+									<form method="post" action="https://formspree.io/info@citéavenirlaval.ca">
 										<div class="row uniform">
 											<div class="6u 12u$(xsmall)">
 												<input type="text" name="demo-name" id="demo-name" value="" placeholder="Name" />
