--- a/en-project.html
+++ b/en-project.html
@@ -51,7 +51,7 @@
 				<!-- Header -->
 					<header id="header">
 						<img class="logoSmall" style="height: 40px; max-width: 40px; margin-left: 0.75em; margin-top: 3px;" src="images/logo-small.png">
-						<h1 style="padding-left: 45px;"><a href="en-index.html">Condos Cité Avenir Laval</a></h1>
+						<h1 style="padding-left: 45px;"><a href="en-index.html">Condos Cité-Avenir Laval</a></h1>
 						<nav id="nav">
 							<ul>
 								<li>
@@ -96,7 +96,7 @@
 												<td>Exceptional location in the heart of Downtown Laval</td>
 											</tr>
 											<tr>
-												<td>5 storey building</td>
+												<td>4 storey building</td>
 											</tr>
 											<tr>
 												<td>Modern Design and Architecture</td>
@@ -126,7 +126,7 @@
 												<td>Interphone system</td>
 											</tr>
 											<tr>
-												<td>Bicycle racks</td>
+												<td>Interior and exterior bicycle racks</td>
 											</tr>
 											<tr>
 												<td>Tire storage room in basement</td>
