--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 				<!-- Header -->
 					<header id="header">
 						<img class="logoSmall" style="height: 40px; max-width: 40px; margin-left: 0.75em; margin-top: 3px;" src="images/logo-small.png">
-						<h1 style="padding-left: 45px;"><a href="index.html">Condos Cité Avenir Laval</a></h1>
+						<h1 style="padding-left: 45px;"><a href="index.html">Condos Cité-Avenir Laval</a></h1>
 						<nav id="nav">
 							<ul>
 								<li>
@@ -99,7 +99,7 @@
 						<img class="logoSmall" style="height: auto; width: 140px; display: block; margin-left: auto; margin-right: auto;" src="images/logoIcon.png">
 						<img class="logoTextSmall" style="height: auto; width: 400px; display: block; margin-left: auto; margin-right: auto;" src="images/logoText.png">
 					</div>
-					<a href="#two" class="more scrolly">Learn More</a>
+					<a href="#two" class="more scrolly">Apprendre plus</a>
 				</section>
 
 
@@ -111,7 +111,7 @@
 								<img class="imageDisappear" src="images/HOME CHILDREN JUMPING.jpg" alt="" />
 							</div>
 							<div class="content">
-								<h4 class="paddingRequire" style="font-weight: 600;">Condos Cité Avenir Laval offers affordable condominiums in the heart of Downtown Laval</h4>
+								<h4 class="paddingRequire" style="font-weight: 600;">Condos Cité-Avenir-Laval vous offre des condos abordables dans le cœur du Centre-Ville de Laval</h4>
 							</div>
 						</section>
 
@@ -120,8 +120,8 @@
 								<img src="images/HOME COUPLES FINGERS TATTOO.jpg" alt="" />
 							</div>
 							<div class="content">
-								<h4 style="font-weight: 600;">Just steps from Metro Montmorency, Autoroutes 440 and 15. One, two, or three  bedroom units are available.</h4>
-								<a href="project.html" style="width: 250px; margin-left: auto; margin-right: auto; margin-top: 25px;" class="button fit special">Project</a>
+								<h4 style="font-weight: 600;">À quelques pas du Metro Montmorency, et des Autoroutes 440 et 15. Des unités avec une, deux, ou trois chambres sont disponibles.</h4>
+								<a href="project.html" style="width: 250px; margin-left: auto; margin-right: auto; margin-top: 25px;" class="button fit special">Projet</a>
 							</div>
 						</section>
 					<div>
@@ -142,7 +142,7 @@
 				<div class="displaySmall2" style="display: none; overflow-x: hidden;">
 					<section style="background-color:  #4591c5">
 						<div style="padding: 40px 10px 40px 10px">
-							<h4 class="paddingRequire" style="font-weight: 600;">Condos Cité Avenir Laval offers affordable condominiums in the heart of Downtown Laval</h4>
+							<h4 class="paddingRequire" style="font-weight: 600;">Condos Cité-Avenir-Laval vous offre des condos abordables dans le cœur du Centre-Ville de Laval</h4>
 						</div>
 						<div style="background-color: #87c45d;">
 							<center><img class="imageSmall" style="width: 100%; height: auto;" src="images/HOME CHILDREN JUMPING.jpg" alt="" /></center>
@@ -151,7 +151,7 @@
 
 					<section style="background-color: #87c45d;">
 						<div style="padding: 40px 10px 40px 10px">
-							<h4 style="font-weight: 600;">Just steps from Metro Montmorency, Autoroutes 440 and 15. One, two, or three  bedroom units are available.</h4>
+							<h4 style="font-weight: 600;">À quelques pas du Metro Montmorency, et des Autoroutes 440 et 15. Des unités avec une, deux, ou trois chambres sont disponibles.</h4>
 							<a href="project.html" style="width: 250px; margin-left: auto; margin-right: auto; margin-top: 25px;" class="button fit special">Project</a>
 						</div>
 						<div style="background-color:#2e3842">
