--- a/neighborhood.html
+++ b/neighborhood.html
@@ -70,7 +70,7 @@
 				<!-- Header -->
 					<header id="header">
 						<img class="logoSmall" style="height: 40px; max-width: 40px; margin-left: 0.75em; margin-top: 3px;" src="images/logo-small.png">
-						<h1 style="padding-left: 45px;"><a href="index.html">Condos Cité Avenir Laval</a></h1>
+						<h1 style="padding-left: 45px;"><a href="index.html">Condos Cité-Avenir Laval</a></h1>
 						<nav id="nav">
 							<ul>
 								<li>
@@ -107,7 +107,7 @@
 										<img src="images/NEIGHBORHOOD place bell.jpg" alt="" />
 									</div>
 									<div class="content">
-										<h4 class="paddingRequire" style="font-weight: 600;">Condos Cité Avenir Laval is in the heart of all the attractions of Downtown Laval.</h4>
+										<h4 class="paddingRequire" style="font-weight: 600;">Condos Cité-Avenir-Laval est au cœur de toute l’action du Centre-Ville de Laval.</h4>
 									</div>
 								</section>
 		
@@ -116,7 +116,7 @@
 										<img src="images/NEIGHBORHOOD centropolis.jpg" alt="" />
 									</div>
 									<div class="content">
-										<h4 style="font-weight: 600;">Enjoy urban living with the tranquility of your own residential neighborhood.</h4>
+										<h4 style="font-weight: 600;">Réjouissez de la vie urbaine avec la quiétude de votre quartier résidentiel.</h4>
 									</div>
 								</section>
 	
@@ -125,7 +125,7 @@
 										<img src="images/NEIGHBORDHOOD metro.jpg" alt="" />
 									</div>
 									<div class="content">
-										<h4 class="paddingRequire" style="font-weight: 600;">Condos Cité Avenir is nearby to all your needs; whether it be for work, leisure, transit, entertainment, nightlife, schools, shopping.</h4>
+										<h4 class="paddingRequire" style="font-weight: 600;">Condos Cité Avenir Laval est à proximité de tout dont vous recherchez; que ça soit le travail, loisir, transit, divertissement, nightlife, enseignement, magasinage.</h4>
 									</div>
 								</section>
 							<div>
@@ -135,7 +135,7 @@
 							<div class="displaySmall2" style="display: none; overflow-x: hidden;">
 								<section style="background-color:  #4591c5">
 									<div style="padding: 30px 10px 40px 10px">
-										<h4 style="font-weight: 600;">Condos Cité Avenir Laval is in the heart of all the attractions of Downtown Laval.</h4>
+										<h4 style="font-weight: 600;">Condos Cité-Avenir-Laval est au cœur de toute l’action du Centre-Ville de Laval.</h4>
 									</div>
 									<div style="background-color: #87c45d;">
 										<center><img class="imageSmall" style="width: 100%; height: auto;" src="images/NEIGHBORHOOD place bell.jpg" alt="" /></center>
@@ -144,7 +144,7 @@
 			
 								<section style="background-color: #87c45d;">
 									<div style="padding: 40px 10px 40px 10px">
-										<h4 style="font-weight: 600;">Enjoy urban living with the tranquility of your own residential neighborhood.</h4>
+										<h4 style="font-weight: 600;">Réjouissez de la vie urbaine avec la quiétude de votre quartier résidentiel.</h4>
 									</div>
 									<div style="background-color:#4591c5;">
 										<img style="width: 100%; height: auto;" src="images/NEIGHBORDHOOD metro.jpg" alt="" />
@@ -153,7 +153,7 @@
 
 								<section style="background-color:  #4591c5">
 									<div style="padding: 40px 10px 40px 10px">
-										<h4 class="paddingRequire" style="font-weight: 600;">Condos Cité Avenir Laval is in the heart of all the attractions of Downtown Laval.</h4>
+										<h4 class="paddingRequire" style="font-weight: 600;">Condos Cité Avenir Laval est à proximité de tout dont vous recherchez; que ça soit le travail, loisir, transit, divertissement, nightlife, enseignement, magasinage.</h4>
 									</div>
 									<div style="background-color: #FFF;">
 										<img class="imageSmall" style="width: 100%; height: auto;" src="images/NEIGHBORHOOD centropolis.jpg" alt="" />
@@ -166,7 +166,7 @@
 
 							<div class="inner">
 
-								<u><h2 style="padding-bottom: 15px;">Area map</h2></u>
+								<u><h2 style="padding-bottom: 15px;">Carte de la région</h2></u>
 
 								<a href="images/planDeQuartier.png">
 									<img class="map" style="display: block; margin-left: auto; margin-right: auto; max-width: 1000px; width: 95%; height: auto;" src="images/planDeQuartier.png">
@@ -203,7 +203,7 @@
 
 								<hr>
 
-								<p>Take advandage of La Ligne 360! The free public transit service that circle’s around the Laval downtown area. Condos Cité Avenir is just steps from the Du Souvenir / De L’avenir bus stop.</p>
+								<p>Profitez de la Ligne 360! Le service de transport gratuit qui boucle autour du Centre-Ville de Laval. Condos Cité-Avenir-Laval est à quelques pas de l’arrêt Du Souvenir / De L’avenir.</p>
 								<a href="http://ligne360.com" style="max-width: 350px; margin-left: auto; margin-right: auto; margin-bottom: 20px; margin-top: 25px;" class="button fit special">www.ligne360.com</a>
 
 							</div>
