--- a/project.html
+++ b/project.html
@@ -51,7 +51,7 @@
 				<!-- Header -->
 					<header id="header">
 						<img class="logoSmall" style="height: 40px; max-width: 40px; margin-left: 0.75em; margin-top: 3px;" src="images/logo-small.png">
-						<h1 style="padding-left: 45px;"><a href="index.html">Condos Cité Avenir Laval</a></h1>
+						<h1 style="padding-left: 45px;"><a href="index.html">Condos Cité-Avenir Laval</a></h1>
 						<nav id="nav">
 							<ul>
 								<li>
@@ -78,7 +78,7 @@
 				<!-- Main -->
 					<article id="main">
 						<header style="background-attachment: scroll;">
-							<h2>Project</h2>
+							<h2>Projet</h2>
 							<!-- <h2>Plan D’aménagement Patsager</h2> -->
 						</header>
 						<section class="wrapper style5">
@@ -88,68 +88,71 @@
 									<center>
 										
 									<!-- Charactertics du project -->
-									<u><h2 style="padding-bottom: 15px;">Project Features</h2></u>
+									<u><h2 style="padding-bottom: 15px;">Caractéristiques du projet</h2></u>
 
 									<table style="max-width: 600px;">
 										<tbody>
 											<tr>
-												<td>Exceptional location in the heart of Downtown Laval</td>
+												<td>Emplacement  exceptionnel au cœur du Centre-Ville de Laval</td>
 											</tr>
 											<tr>
-												<td>5 storey building</td>
+												<td>Immeuble de 4 étages</td>
 											</tr>
 											<tr>
-												<td>Modern Design and Architecture</td>
+												<td>Architecture et design moderne</td>
 											</tr>
 											<tr>
-												<td>Superior quality wood / reinforced concrete construction </td>
+												<td>Construction de qualité supérieure en bois, béton armé, et acier</td>
 											</tr>
 											<tr>
-												<td>Total of 19 spacious units with generous  windows and 9 foot ceiling height </td>
+												<td>Total de 19 unités spacieux avec une fenestration abondante et plafonds 9 pieds de hauteur</td>
 											</tr>
 											<tr>
-												<td>2 two-storey penthouse units with private terraces</td>
+												<td>2 « penthouses » à 2 niveaux avec terrasses privés au toit</td>
 											</tr>
 											<tr>
-												<td>Elevator</td>
+												<td>Ascenseur</td>
 											</tr>
 											<tr>
-												<td>Trash chute with recycling system</td>
+												<td>Chute à déchets muni d’un système de recyclage</td>
 											</tr>
 											<tr>
-												<td>Entrance lobby and common spaces in a modern design with contemporary furnishings</td>
+												<td>Hall d’entrée et espaces communs dans un design modern avec mobilier contemporain</td>
 											</tr>
 											<tr>
-												<td>Interior and exterior parking</td>
+												<td>Balcon privé pour chaque unité</td>
 											</tr>
 											<tr>
-												<td>Interphone system</td>
+												<td>Stationnement intérieur et extérieur</td>
 											</tr>
 											<tr>
-												<td>Bicycle racks</td>
+												<td>Système d'interphone</td>
 											</tr>
 											<tr>
-												<td>Tire storage room in basement</td>
+												<td>Rangement pour vélos intérieurs et extérieurs</td>
 											</tr>
 											<tr>
-												<td>Electric vehicle charger</td>
+												<td>Salle d’entreposage de pneus au sous-sol</td>
 											</tr>
 											<tr>
-												<td>Rooftop terrace with contemporary garden furniture</td>
+												<td>Bornes de chargement pour les voitures électriques</td>
+											</tr>
+											<tr>
+												<td>Toit Terrasse commun avec mobilier de jardin contemporain</td>
 											</tr>
 										</tbody>
 									</table>
 								</center>
 								</div>
-								<center><p>**conditions may apply**</p></center>
+								<center><p>**conditions peuvent s’appliquer**</p></center>
 
-								<center><h4 style="margin-top: 50px">Download complete list of features</h4></center>
-								<center><a href="other/SPECIFICATIONS.pdf" download style="margin-bottom: 40px; margin-top: 10px;" class="button special icon fa-download">Project Specifications</a><center>
+								<center><h4 style="margin-top: 50px">Télécharger Liste de caractéristiques complète</h4></center>
+								<center><a href="other/SPECIFICATIONS.pdf" download style="margin-bottom: 40px; margin-top: 10px;" class="button special icon fa-download">Spécification du projet</a><center>
 
 								<hr>
 
 								<!-- Vue en exterior -->
-								<u><h2 style="padding-bottom: 15px;">Exterior Plan View</h2></u>
+								<u><h2 style="padding-bottom: 15px;">Vue du plan extérieur</h2></u>
 
 								<a href="images/plansLandscape.png">
 									<img class="map" style="display: block; margin-left: auto; margin-right: auto; max-width: 1000px; width: 95%; height: auto;" src="images/plansLandscape.png">
