--- a/en-unit204.html
+++ b/en-unit204.html
@@ -33,7 +33,7 @@
 
     <header id="header">
         <img class="logoSmall" style="height: 40px; max-width: 40px; margin-left:  0.75em; margin-top: 3px;" src="images/logo-small.png">
-        <h1 style="padding-left: 45px;"><a href="en-index.html">Condos Cité Avenir Laval</a></h1>
+        <h1 style="padding-left: 45px;"><a href="en-index.html">Condos Cité-Avenir Laval</a></h1>
         <nav id="nav">
             <ul>
                 <li>
