--- a/plans.html
+++ b/plans.html
@@ -54,7 +54,7 @@
 
     <header id="header">
         <img class="logoSmall" style="height: 40px; max-width: 40px; margin-left:  0.75em; margin-top: 3px;" src="images/logo-small.png">
-        <h1 style="padding-left: 45px;"><a href="index.html">Condos Cité Avenir Laval</a></h1>
+        <h1 style="padding-left: 45px;"><a href="index.html">Condos Cité-Avenir Laval</a></h1>
         <nav id="nav">
             <ul>
                 <li>
@@ -86,7 +86,7 @@
         <section class="wrapper style5" style="padding: 2em 0 2em 0;">
 
             <!-- Vue en exterior -->
-            <h2 style="padding-bottom: 15px;">Select a floor</h2>
+            <h2 style="padding-bottom: 15px;">Sélectionnez un étage</h2>
 
             <div class="displayBig">
                 <center>
