--- a/unit405.html
+++ b/unit405.html
@@ -33,7 +33,7 @@
 
     <header id="header">
         <img class="logoSmall" style="height: 40px; max-width: 40px; margin-left:  0.75em; margin-top: 3px;" src="images/logo-small.png">
-        <h1 style="padding-left: 45px;"><a href="index.html">Condos Cité Avenir Laval</a></h1>
+        <h1 style="padding-left: 45px;"><a href="index.html">Condos Cité-Avenir Laval</a></h1>
         <nav id="nav">
             <ul>
                 <li>
@@ -63,10 +63,6 @@
         <section class="wrapper style5" style="padding: 2em 0 2em 0;">
             <a href="plans/405-1.png">
             <img class="map" style="display: block; margin-left: auto; margin-right: auto; max-width: 835px; width: 95%; height: auto;" src="plans/405-1.png">
-            </a>
-
-            <a href="plans/405-M-1.png">
-            <img class="map" style="display: block; margin-left: auto; margin-right: auto; max-width: 835px; width: 95%; height: auto;" src="plans/405-M-1.png">
             </a>
         </section>
     </article>
