transalation stays on page

--- a/en-contact.html
+++ b/en-contact.html
@@ -68,7 +68,7 @@
 											<li><a href="en-plans.html">Plans</a></li>
 											<li><a href="en-builder.html">Builder</a></li>
 											<li><a href="en-contact.html">Contact</a></li>
-											<li class="displaySmall" style="display: none;"><a href="index.html"><span>Français</span></a></li>
+											<li class="displaySmall" style="display: none;"><a href="contact.html"><span>Français</span></a></li>
 										</ul>
 									</div>
 								</li>
