--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
 					<section style="background-color: #87c45d;">
 						<div style="padding: 40px 10px 40px 10px">
 							<h4 style="font-weight: 600;">À quelques pas du Metro Montmorency, et des Autoroutes 440 et 15. Des unités avec une, deux, ou trois chambres sont disponibles.</h4>
-							<a href="project.html" style="width: 250px; margin-left: auto; margin-right: auto; margin-top: 25px;" class="button fit special">Project</a>
+							<a href="project.html" style="width: 250px; margin-left: auto; margin-right: auto; margin-top: 25px;" class="button fit special">Projet</a>
 						</div>
 						<div style="background-color:#2e3842">
 							<center><img class="imageSmall" style="width: 100%; height: auto;" src="images/HOME COUPLES FINGERS TATTOO.jpg" alt="" /></center>
