--- a/neighborhood.html
+++ b/neighborhood.html
@@ -86,7 +86,7 @@
 													<li><a href="plans.html">Plans</a></li>
 													<li><a href="builder.html">Constructeur</a></li>
 													<li><a href="contact.html">Contact</a></li>
-													<li class="displaySmall" style="display: none;"><a href="en-index.html"><span>English</span></a></li>
+													<li class="displaySmall" style="display: none;"><a href="en-neighborhood.html"><span>English</span></a></li>
 												</ul>
 									</div>
 								</li>
