same as last commit but for desktop

--- a/en-project.html
+++ b/en-project.html
@@ -55,7 +55,7 @@
 						<nav id="nav">
 							<ul>
 								<li>
-									<div class="displayBig"><a href="index.html"><span>Français</span></a></div>
+									<div class="displayBig"><a href="project.html"><span>Français</span></a></div>
 								</li>
 								<li class="special">
 									<a href="#menu" class="menuToggle"><span>Menu</span></a>
