--- a/floor4.html
+++ b/floor4.html
@@ -46,7 +46,7 @@
         <nav id="nav">
             <ul>
                 <li>
-                    <div class="displayBig"><a href="en-index.html"><span>English</span></a></div>
+                    <div class="displayBig"><a href="en-plans.html"><span>English</span></a></div>
                 </li>
                 <li class="special">
                     <a href="#menu" class="menuToggle"><span>Menu</span></a>
