--- a/project.html
+++ b/project.html
@@ -55,7 +55,7 @@
 						<nav id="nav">
 							<ul>
 								<li>
-									<div class="displayBig"><a href="en-index.html"><span>English</span></a></div>
+									<div class="displayBig"><a href="en-project.html"><span>English</span></a></div>
 								</li>
 								<li class="special">
 									<a href="#menu" class="menuToggle"><span>Menu</span></a>
