changes after being paid

--- a/contact.html
+++ b/contact.html
@@ -94,7 +94,7 @@
 								<hr />
 
 								<section>
-									<form method="post" action="https://formspree.io/info@m2construction.ca">
+									<form method="post" action="https://formspree.io/info@citeavenirlaval.ca">
 										<div class="row uniform">
 											<div class="6u 12u$(xsmall)">
 												<input type="text" name="demo-name" id="demo-name" value="" placeholder="Nom" />
