--- a/en-builder.html
+++ b/en-builder.html
@@ -83,7 +83,7 @@
 						</header>
 						<section class="wrapper style5" style="padding: 2em 0 3em 0;">
 							<div class="inner" style="padding: 0 2em 0 2em;">
-								<p>The promoters of Condominiums Cité Avenir Laval have mandated M2 Construction inc with the construction of this project.</p>
+								<p>The promoters of Condominiums Cité-Avenir-Laval have mandated M2 Construction inc with the construction of this project.</p>
 								<p>M2 Construction inc. is a family owned and operated company with over 35 years of experience in Building construction, Project Development and Project Management. M2 Construction inc. has overseen and directed the construction of many luxury homes, multi-family dwellings, as well as townhouses and condominium projects in the Greater Montreal area.</p>
 								<a href="http://www.m2construction.ca/" style="margin-left: auto; margin-right: auto; margin-bottom: 0px; margin-top: 25px;" class="button fit special">m2construction.ca</a>
 							</div>
