--- a/en-index.html
+++ b/en-index.html
@@ -111,7 +111,7 @@
 								<img class="imageDisappear" src="images/HOME CHILDREN JUMPING.jpg" alt="" />
 							</div>
 							<div class="content">
-								<h4 class="paddingRequire" style="font-weight: 600;">Condos Cité Avenir Laval offers affordable condominiums in the heart of Downtown Laval</h4>
+								<h4 class="paddingRequire" style="font-weight: 600;">Condos Cité-Avenir-Laval offers affordable condominiums in the heart of Downtown Laval</h4>
 							</div>
 						</section>
 
@@ -142,7 +142,7 @@
 				<div class="displaySmall2" style="display: none; overflow-x: hidden;">
 					<section style="background-color:  #4591c5">
 						<div style="padding: 40px 10px 40px 10px">
-							<h4 class="paddingRequire" style="font-weight: 600;">Condos Cité Avenir Laval offers affordable condominiums in the heart of Downtown Laval</h4>
+							<h4 class="paddingRequire" style="font-weight: 600;">Condos Cité-Avenir-Laval offers affordable condominiums in the heart of Downtown Laval</h4>
 						</div>
 						<div style="background-color: #87c45d;">
 							<center><img class="imageSmall" style="width: 100%; height: auto;" src="images/HOME CHILDREN JUMPING.jpg" alt="" /></center>
