--- a/en-neighborhood.html
+++ b/en-neighborhood.html
@@ -62,7 +62,7 @@
 		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
 		<link rel="icon" href="images/logo-small.png">
 	</head>
-	<body>
+	<body style="overflow-x: hidden;">
 
 		<!-- Page Wrapper -->
 			<div id="page-wrapper">
@@ -107,7 +107,7 @@
 										<img src="images/NEIGHBORHOOD place bell.jpg" alt="" />
 									</div>
 									<div class="content">
-										<h4 class="paddingRequire" style="font-weight: 600;">Condos Cité Avenir Laval is in the heart of all the attractions of Downtown Laval.</h4>
+										<h4 class="paddingRequire" style="font-weight: 600;">Condos Cité-Avenir-Laval is in the heart of all the attractions of Downtown Laval.</h4>
 									</div>
 								</section>
 		
@@ -125,7 +125,7 @@
 										<img src="images/NEIGHBORDHOOD metro.jpg" alt="" />
 									</div>
 									<div class="content">
-										<h4 class="paddingRequire" style="font-weight: 600;">Condos Cité Avenir is nearby to all your needs; whether it be for work, leisure, transit, entertainment, nightlife, schools, shopping.</h4>
+										<h4 class="paddingRequire" style="font-weight: 600;">Condos Cité-Avenir-Laval is nearby to all your needs; whether it be for work, leisure, transit, entertainment, nightlife, schools, shopping.</h4>
 									</div>
 								</section>
 							<div>
@@ -135,7 +135,7 @@
 							<div class="displaySmall2" style="display: none; overflow-x: hidden;">
 								<section style="background-color:  #4591c5">
 									<div style="padding: 30px 10px 40px 10px">
-										<h4 style="font-weight: 600;">Condos Cité Avenir Laval is in the heart of all the attractions of Downtown Laval.</h4>
+										<h4 style="font-weight: 600;">Condos Cité-Avenir-Laval is in the heart of all the attractions of Downtown Laval.</h4>
 									</div>
 									<div style="background-color: #87c45d;">
 										<center><img class="imageSmall" style="width: 100%; height: auto;" src="images/NEIGHBORHOOD place bell.jpg" alt="" /></center>
@@ -153,7 +153,7 @@
 
 								<section style="background-color:  #4591c5">
 									<div style="padding: 40px 10px 40px 10px">
-										<h4 class="paddingRequire" style="font-weight: 600;">Condos Cité Avenir Laval is in the heart of all the attractions of Downtown Laval.</h4>
+										<h4 class="paddingRequire" style="font-weight: 600;">Condos Cité-Avenir-Laval is in the heart of all the attractions of Downtown Laval.</h4>
 									</div>
 									<div style="background-color: #FFF;">
 										<img class="imageSmall" style="width: 100%; height: auto;" src="images/NEIGHBORHOOD centropolis.jpg" alt="" />
@@ -182,7 +182,7 @@
 												<td width="50%" style="text-align: center;">Éspace Montmorency</td>
 											</tr>
 											<tr>
-												<td width="50%" style="text-align: center;">Carrefour Laval</td>
+												<td width="50%" style="text-align: center;">Collège Montmorency</td>
 												<td width="50%" style="text-align: center;">Centropolis Laval</td>
 											</tr>
 											<tr>
@@ -194,7 +194,7 @@
 												<td width="50%" style="text-align: center;">Quartier Laval</td>
 											</tr>
 											<tr>
-												<td width="50%" style="text-align: center;">Collège Montmorency</td>
+												<td width="50%" style="text-align: center;">Carrefour Laval / Costco</td>
 												<td width="50%" style="text-align: center;">Université de Montréal Campus Laval</td>
 											</tr>
 										</tbody>
@@ -203,7 +203,7 @@
 
 								<hr>
 
-								<p>Take advandage of La Ligne 360! The free public transit service that circle’s around the Laval downtown area. Condos Cité Avenir is just steps from the Du Souvenir / De L’avenir bus stop.</p>
+								<p>Take advandage of La Ligne 360! The free public transit service that circle’s around the Laval downtown area. Condos Cité-Avenir-Laval is just steps from the Du Souvenir / De L’avenir bus stop.</p>
 								<a href="http://ligne360.com" style="max-width: 350px; margin-left: auto; margin-right: auto; margin-bottom: 20px; margin-top: 25px;" class="button fit special">www.ligne360.com</a>
 
 							</div>
