--- a/en-project.html
+++ b/en-project.html
@@ -99,16 +99,16 @@
 												<td>4 storey building</td>
 											</tr>
 											<tr>
-												<td>Modern Design and Architecture</td>
+												<td>Modern design and architecture</td>
 											</tr>
 											<tr>
-												<td>Superior quality wood / reinforced concrete construction </td>
+												<td>Superior quality wood, reinforced concrete, and steel construction</td>
 											</tr>
 											<tr>
 												<td>Total of 19 spacious units with generous  windows and 9 foot ceiling height </td>
 											</tr>
 											<tr>
-												<td>2 two-storey penthouse units with private terraces</td>
+												<td>Private balcony for each unit</td>
 											</tr>
 											<tr>
 												<td>Elevator</td>
@@ -143,7 +143,13 @@
 								</div>
 								<center><p>**conditions may apply**</p></center>
 
-								<center><a href="other/SPECIFICATIONS.pdf" download style="margin-bottom: 40px; margin-top: 10px;" class="button special icon fa-download">Download complete list of features</a><center>
+								<center>
+									<div style='background-color: #83cae9; padding: 10px; border-radius: 4px; max-width: 500px;'>
+										<a href="other/SPECIFICATIONS.pdf" download style="color: #FFF;">
+											Download complete list of features
+										</a>
+									</div>
+								<center>
 
 								<hr>
 
