--- a/project.html
+++ b/project.html
@@ -108,9 +108,6 @@
 												<td>Total de 19 unités spacieux avec une fenestration abondante et plafonds 9 pieds de hauteur</td>
 											</tr>
 											<tr>
-												<td>2 « penthouses » à 2 niveaux avec terrasses privés au toit</td>
-											</tr>
-											<tr>
 												<td>Ascenseur</td>
 											</tr>
 											<tr>
@@ -146,9 +143,13 @@
 								</div>
 								<center><p>**conditions peuvent s’appliquer**</p></center>
 
-								<center><a href="other/SPECIFICATIONS.pdf" download style="margin-bottom: 40px; margin-top: 10px;" class="button special icon fa-download">
-									Télécharger Liste de caractéristiques complète
-								</a><center>
+								<center>
+									<div style='background-color: #83cae9; padding: 10px; border-radius: 4px; max-width: 500px;'>
+										<a href="other/CARACTERISTIQUES.pdf" download style="color: #FFF;">
+											Télécharger Liste de caractéristiques complète
+										</a>
+									</div>
+								<center>
 
 								<hr>
 
