--- a/neighborhood.html
+++ b/neighborhood.html
@@ -62,7 +62,7 @@
 		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
 		<link rel="icon" href="images/logo-small.png">
 	</head>
-	<body>
+	<body style="overflow-x: hidden;">
 
 		<!-- Page Wrapper -->
 			<div id="page-wrapper">
@@ -125,7 +125,7 @@
 										<img src="images/NEIGHBORDHOOD metro.jpg" alt="" />
 									</div>
 									<div class="content">
-										<h4 class="paddingRequire" style="font-weight: 600;">Condos Cité Avenir Laval est à proximité de tout dont vous recherchez; que ça soit le travail, loisir, transit, divertissement, nightlife, enseignement, magasinage.</h4>
+										<h4 class="paddingRequire" style="font-weight: 600;">Condos Cité-Avenir-Laval est à proximité de tout dont vous recherchez; que ça soit le travail, loisir, transit, divertissement, nightlife, enseignement, magasinage.</h4>
 									</div>
 								</section>
 							<div>
@@ -153,7 +153,7 @@
 
 								<section style="background-color:  #4591c5">
 									<div style="padding: 40px 10px 40px 10px">
-										<h4 class="paddingRequire" style="font-weight: 600;">Condos Cité Avenir Laval est à proximité de tout dont vous recherchez; que ça soit le travail, loisir, transit, divertissement, nightlife, enseignement, magasinage.</h4>
+										<h4 class="paddingRequire" style="font-weight: 600;">Condos Cité-Avenir-Laval est à proximité de tout dont vous recherchez; que ça soit le travail, loisir, transit, divertissement, nightlife, enseignement, magasinage.</h4>
 									</div>
 									<div style="background-color: #FFF;">
 										<img class="imageSmall" style="width: 100%; height: auto;" src="images/NEIGHBORHOOD centropolis.jpg" alt="" />
@@ -182,7 +182,7 @@
 												<td width="50%" style="text-align: center;">Éspace Montmorency</td>
 											</tr>
 											<tr>
-												<td width="50%" style="text-align: center;">Carrefour Laval</td>
+												<td width="50%" style="text-align: center;">Collège Montmorency</td>
 												<td width="50%" style="text-align: center;">Centropolis Laval</td>
 											</tr>
 											<tr>
@@ -194,7 +194,7 @@
 												<td width="50%" style="text-align: center;">Quartier Laval</td>
 											</tr>
 											<tr>
-												<td width="50%" style="text-align: center;">Collège Montmorency</td>
+												<td width="50%" style="text-align: center;">Carrefour Laval / Costco</td>
 												<td width="50%" style="text-align: center;">Université de Montréal Campus Laval</td>
 											</tr>
 										</tbody>
