Uploaded new plans

--- a/en-project.html
+++ b/en-project.html
@@ -143,13 +143,13 @@
 								</div>
 								<center><p>**conditions may apply**</p></center>
 
-								<center>
+								<!-- <center>
 									<div style='background-color: #83cae9; padding: 10px; border-radius: 4px; max-width: 500px;'>
 										<a href="other/SPECIFICATIONS.pdf" download style="color: #FFF;">
 											Download complete list of features
 										</a>
 									</div>
-								<center>
+								<center> -->
 
 								<hr>
 
