--- a/project.html
+++ b/project.html
@@ -143,13 +143,13 @@
 								</div>
 								<center><p>**conditions peuvent s’appliquer**</p></center>
 
-								<center>
+								<!-- <center>
 									<div style='background-color: #83cae9; padding: 10px; border-radius: 4px; max-width: 500px;'>
 										<a href="other/CARACTERISTIQUES.pdf" download style="color: #FFF;">
 											Télécharger Liste de caractéristiques complète
 										</a>
 									</div>
-								<center>
+								<center> -->
 
 								<hr>
 
