--- a/en-index.html
+++ b/en-index.html
@@ -97,7 +97,7 @@
 					<div class="inner">
 						<!-- <h2>Condos Cité Avenir Laval</h2> -->
 						<img class="logoSmall" style="height: auto; width: 140px; display: block; margin-left: auto; margin-right: auto;" src="images/logoIcon.png">
-						<img class="logoTextSmall" style="height: auto; width: 400px; display: block; margin-left: auto; margin-right: auto;" src="images/logoText.png">
+						<img class="logoTextSmall" style="height: auto; width: 400px; display: block; margin-left: auto; margin-right: auto; padding-top: 20px;" src="images/logoText.png">
 					</div>
 					<a href="#two" class="more scrolly">Learn More</a>
 				</section>
